documentation additions, submission package organization, troubleshooting section added to README